2000-09-28  Kriston J. Rehberg  <Kriston@AOL.NET>

	
	* nsd/serv.c (NsConnArgProc): Race condition when threads exit
	while [ns_info threads] is run; arg can be NULL.  Seen mostly by
	people who regularly visit nstelemetry.adp.

2000-09-28  Jim Davidson
	
	* nssock/sock.c: Fixed bufferred read code in SockRead, resulting
	in a big performance boost and system load reduction.  Special
	thanks to Zachary Girouard <zakk@aol.net>.

2000-09-05  Kriston J. Rehberg  <Kriston@AOL.NET>

	*** AOLserver 3.1 Released *** 

2000-09-05  (various: Jerry Asher, Jim Davidson, "Dossy," Curtis Galloway,
	Scott S. Goodwin, Rob Mayoff, Kriston J. Rehberg)

	* thread/win32.cpp: Sets thread stack size as on other platforms.

	* thread/thread.c: NULL out thread arg at exit to avoid
	Ns_ThreadEnum checking arg info for possibly deallocated context
	as seen in ns_info threads.  Also, moved read of firstPtr in
	Ns_ThreadEnum inside lock.  Added Ns_ThreadCreate2 in thread.c
	needed for upgrade to Tcl 8.3.1 in tcl8x.c
	
	* thread/pthread.cpp: ETIME bug work around not causes wakeup in
	Ns_CondWait and Ns_CondTimeWait instead of waiting again.  This is
	more conservative and should avoid problems some have had with
	threads missing wakeup.

	* thread/pool.c: Added a simple 1-byte range check to -z
	allocator.

	* thread/Makefile: Added dependency for osthread.o to Makefile.

	* tcl/namespace.tcl: Added namespace export to init script.

	* nsvhr/nsvhr.c: Switched to Ns_WriteConn in TimedSockDump to
	ensure all data was sent.

	* nssock(nsssl): SSL module includes a fake 40-bit/512-bit
	export-grade SSL keyfile.pem and certfile.pem for immediate use on
	installation.  Adjusted for use with BSAFE 4 and 5.

	* nspd: Library now installed to binary distribution.

	* nsd/tclsock.c: Fixed crash bug in error message in ns_socknread.

	* nsd/tclcmds.c: Added ns_adp_registertag command as documented.
	
	* nsd/serv.c: Added missing break for unauthorized case in
	ConnRun.
